<resources>
    <string name="app_name">SiAtlet</string>
    <string name="username">Username</string>
    <string name="content_desc">Content Desc</string>
    <string name="add">Tambah</string>
    <string name="level">Level</string>
    <string name="name">Nama</string>
    <string name="input_name">Masukan nama</string>
    <string name="input_username">Masukan username</string>
    <string name="password">Password</string>
    <string name="input_password">Masukan password</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="phone">Nomor Handphone</string>
    <string name="input_phone">Masukan nomor handphone</string>
    <string name="address">Alamat</string>
    <string name="input_address">Masukan alamat</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="update">Update</string>
    <string name="title_delete">Hapus Data</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus data ini?</string>
    <string name="title_update">Update Data</string>
    <string name="message_update">Apakah anda yakin ingin mengubah data ini?</string>
    <string name="back">Kembali</string>
    <string name="criteria_value">Nilai Kriteria</string>
    <string name="criteria_weight">Bobot Kriteria</string>
    <string name="participant">Peserta</string>
    <string name="place_of_birth">Tempat Lahir</string>
    <string name="input_place_of_birth">Masukan tempat lahir</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="input_date_of_birth">Pilih tanggal lahir</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="weight">Berat Badan</string>
    <string name="input_weight">Masukan berat badan</string>
    <string name="job">Pekerjaan</string>
    <string name="input_job">Masukan pekerjaan</string>
    <string name="input_number_registration">Masukan nomor registrasi</string>
    <string name="number_registration">Nomor Registrasi</string>
    <string name="value">Nilai</string>
    <string name="input_value">Masukan nilai</string>
    <string name="desc">Keterangan</string>
    <string name="input_desc">Masukan keterangan</string>
    <string name="participant_value">Nilai Peserta</string>
    <string name="detail_participant">Detail Peserta</string>
</resources>