<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerAddUpdateUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelLevel"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spLevel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/labelLevel"
            app:layout_constraintStart_toStartOf="@+id/labelLevel"
            app:layout_constraintTop_toBottomOf="@+id/labelLevel"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/ivDropdown"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/spLevel"
            app:layout_constraintEnd_toEndOf="@+id/spLevel"
            app:layout_constraintTop_toTopOf="@+id/spLevel" />

        <TextView
            android:id="@+id/labelName"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/spLevel"
            app:layout_constraintStart_toStartOf="@+id/spLevel"
            app:layout_constraintTop_toBottomOf="@+id/spLevel" />

        <EditText
            android:id="@+id/editName"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/labelName"
            app:layout_constraintStart_toStartOf="@+id/labelName"
            app:layout_constraintTop_toBottomOf="@+id/labelName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelUsername"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="@+id/editName"
            app:layout_constraintStart_toStartOf="@+id/editName"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <EditText
            android:id="@+id/editUsername"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/labelUsername"
            app:layout_constraintStart_toStartOf="@+id/labelUsername"
            app:layout_constraintTop_toBottomOf="@+id/labelUsername"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelPassword"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/editUsername"
            app:layout_constraintStart_toStartOf="@+id/editUsername"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/labelPassword"
            app:layout_constraintStart_toStartOf="@+id/labelPassword"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelGender"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            app:layout_constraintEnd_toEndOf="@+id/editUsername"
            app:layout_constraintStart_toStartOf="@+id/editUsername"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <Spinner
            android:id="@+id/spGender"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/labelGender"
            app:layout_constraintStart_toStartOf="@+id/labelGender"
            app:layout_constraintTop_toBottomOf="@+id/labelGender"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/ivDropdown2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/spGender"
            app:layout_constraintEnd_toEndOf="@+id/spGender"
            app:layout_constraintTop_toTopOf="@+id/spGender" />


        <TextView
            android:id="@+id/labelPhone"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="@+id/spGender"
            app:layout_constraintStart_toStartOf="@+id/spGender"
            app:layout_constraintTop_toBottomOf="@+id/spGender" />

        <EditText
            android:id="@+id/editPhone"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/labelPhone"
            app:layout_constraintStart_toStartOf="@+id/labelPhone"
            app:layout_constraintTop_toBottomOf="@+id/labelPhone" />

        <TextView
            android:id="@+id/labelAddress"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            app:layout_constraintEnd_toEndOf="@+id/editPhone"
            app:layout_constraintStart_toStartOf="@+id/editPhone"
            app:layout_constraintTop_toBottomOf="@+id/editPhone" />

        <EditText
            android:id="@+id/editAddress"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_address"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/labelAddress"
            app:layout_constraintStart_toStartOf="@+id/labelAddress"
            app:layout_constraintTop_toBottomOf="@+id/labelAddress" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddUpdate"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editAddress"
            app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>