<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelParticipant"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/participant" />

        <TextView
            android:id="@+id/labelCriteriaWeight"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/criteria_weight"
            app:layout_constraintEnd_toEndOf="@+id/labelParticipant"
            app:layout_constraintStart_toStartOf="@+id/labelParticipant"
            app:layout_constraintTop_toBottomOf="@+id/labelParticipant" />

        <TextView
            android:id="@+id/labelCriteriaValue"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/criteria_value"
            app:layout_constraintEnd_toEndOf="@+id/labelCriteriaWeight"
            app:layout_constraintStart_toStartOf="@+id/labelCriteriaWeight"
            app:layout_constraintTop_toBottomOf="@+id/labelCriteriaWeight" />

        <TextView
            android:id="@+id/labelBack"
            style="@style/TextView.PoppinsMedium14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="@+id/labelCriteriaValue"
            app:layout_constraintStart_toStartOf="@+id/labelCriteriaValue"
            app:layout_constraintTop_toBottomOf="@+id/labelCriteriaValue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>