<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelDetailParticipant"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/detail_participant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelParticipantValue"
            style="@style/TextView.PoppinsRegular14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/participant_value"
            app:layout_constraintEnd_toEndOf="@+id/labelDetailParticipant"
            app:layout_constraintStart_toStartOf="@+id/labelDetailParticipant"
            app:layout_constraintTop_toBottomOf="@+id/labelDetailParticipant" />

        <TextView
            android:id="@+id/labelBack"
            style="@style/TextView.PoppinsMedium14spBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="@+id/labelParticipantValue"
            app:layout_constraintStart_toStartOf="@+id/labelParticipantValue"
            app:layout_constraintTop_toBottomOf="@+id/labelParticipantValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>